[package]
name = "openscad-rs"
version = "0.1.0"
edition = "2024"
description = "A high-performance OpenSCAD parser library for Rust"
license = "MIT OR Apache-2.0"
authors = ["Bernhard Janetzki <boerni@gmail.com>"]
repository = "https://github.com/ierror/openscad-rs"
homepage = "https://github.com/ierror/openscad-rs"
readme = "README.md"
keywords = ["openscad", "parser", "cad", "3d", "ast"]
categories = ["parser-implementations", "development-tools"]
exclude = ["vendor/", "benches/", "tests/", "target/", ".github/", ".claude/"]

[dependencies]
hyperreal = "0.13.0"
logos = "0.15"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
glob = "0.3"
insta = "1"

[[bench]]
name = "parse_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_lines = "allow"

# Release profile used by `dist`.
[profile.dist]
inherits = "release"
lto = "thin"

# Check lints and tests before `cargo-release` creates a version-bump commit.
[package.metadata.release]
pre-release-hook = ["cargo", "clippy", "--", "-D", "warnings"]
